@@ -171,6 +171,24 @@ static int cvtdberr(/*@unused@*/ dbiIndex dbi, const char * msg, int error, int 
 }
 /*@=globuse =mustmod @*/
 
+/**
+ * Return (possibly renamed) tagName. Handles Filedigests -> Filemd5s renaming.
+ * @param value		tag value
+ * @return		tag string
+ */
+static const char * mapTagName(int value)
+	/*@*/
+{
+    const char * s = tagName(value);
+    if (s == NULL)
+	s = "";
+#ifdef	NOTYET
+    else if (!strcmp(s, "Filedigests"))
+	s = "Filemd5s";
+#endif
+    return s;
+}
+
 static int db_fini(dbiIndex dbi, const char * dbhome,
 		/*@null@*/ const char * dbfile,
 		/*@unused@*/ /*@null@*/ const char * dbsubfile)
@@ -188,7 +206,7 @@ static int db_fini(dbiIndex dbi, const char * dbhome,
     rc = cvtdberr(dbi, "dbenv->close", rc, _debug);
 
     if (dbfile)
-	rpmMessage(RPMMESS_DEBUG, _("closed   db environment %s/%s\n"),
+	rpmMessage(RPMMESS_DEBUG, D_("closed   db environment %s/%s\n"),
 			dbhome, dbfile);
 
     if (rpmdb->db_remove_env) {
@@ -207,7 +225,7 @@ static int db_fini(dbiIndex dbi, const char * dbhome,
 	    xx = cvtdberr(dbi, "dbenv->remove", xx, _debug);
 
 	    if (dbfile)
-		rpmMessage(RPMMESS_DEBUG, _("removed  db environment %s/%s\n"),
+		rpmMessage(RPMMESS_DEBUG, D_("removed  db environment %s/%s\n"),
 			dbhome, dbfile);
 	}
 
@@ -328,7 +346,7 @@ static int db_init(dbiIndex dbi, const char * dbhome,
     if (eflags & DB_JOINENV) eflags &= DB_JOINENV;
 
     if (dbfile)
-	rpmMessage(RPMMESS_DEBUG, _("opening  db environment %s/%s %s\n"),
+	rpmMessage(RPMMESS_DEBUG, D_("opening  db environment %s/%s %s\n"),
 		dbhome, dbfile, prDbiOpenFlags(eflags, 1));
 
     /* XXX Can't do RPC w/o host. */
@@ -937,9 +955,9 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
     } else {
 #ifdef	HACK	/* XXX necessary to support dbsubfile */
 	dbfile = (dbi->dbi_file ? dbi->dbi_file : db3basename);
-	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : tagName(dbi->dbi_rpmtag));
+	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : mapTagName(dbi->dbi_rpmtag));
 #else
-	dbfile = (dbi->dbi_file ? dbi->dbi_file : tagName(dbi->dbi_rpmtag));
+	dbfile = (dbi->dbi_file ? dbi->dbi_file : mapTagName(dbi->dbi_rpmtag));
 	dbsubfile = NULL;
 #endif
     }
@@ -951,8 +969,8 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
 	rc = cvtdberr(dbi, "db->close", rc, _printit);
 	db = dbi->dbi_db = NULL;
 
-	rpmMessage(RPMMESS_DEBUG, _("closed   db index       %s/%s\n"),
-		dbhome, (dbfile ? dbfile : tagName(dbi->dbi_rpmtag)));
+	rpmMessage(RPMMESS_DEBUG, D_("closed   db index       %s/%s\n"),
+		dbhome, (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)));
 
     }
 
@@ -1021,9 +1039,9 @@ static int db3close(/*@only@*/ dbiIndex dbi, /*@unused@*/ unsigned int flags)
 		rc = db->verify(db, dbf, NULL, NULL, flags);
 		rc = cvtdberr(dbi, "db->verify", rc, _debug);
 
-		rpmMessage(RPMMESS_DEBUG, _("verified db index       %s/%s\n"),
+		rpmMessage(RPMMESS_DEBUG, D_("verified db index       %s/%s\n"),
 			(dbhome ? dbhome : ""),
-			(dbfile ? dbfile : tagName(dbi->dbi_rpmtag)));
+			(dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)));
 
 	        /*
 		 * The DB handle may not be accessed again after
@@ -1115,9 +1133,9 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
     } else {
 #ifdef	HACK	/* XXX necessary to support dbsubfile */
 	dbfile = (dbi->dbi_file ? dbi->dbi_file : db3basename);
-	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : tagName(dbi->dbi_rpmtag));
+	dbsubfile = (dbi->dbi_subfile ? dbi->dbi_subfile : mapTagName(dbi->dbi_rpmtag));
 #else
-	dbfile = (dbi->dbi_file ? dbi->dbi_file : tagName(dbi->dbi_rpmtag));
+	dbfile = (dbi->dbi_file ? dbi->dbi_file : mapTagName(dbi->dbi_rpmtag));
 	dbsubfile = NULL;
 #endif
     }
@@ -1165,7 +1183,7 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
 	    xx = db3_pthread_nptl();
 	    if (xx) {
 		dbi->dbi_eflags |= DB_PRIVATE;
-		rpmMessage(RPMMESS_DEBUG, _("unshared posix mutexes found(%d), adding DB_PRIVATE, using fcntl lock\n"), xx);
+		rpmMessage(RPMMESS_DEBUG, D_("unshared posix mutexes found(%d), adding DB_PRIVATE, using fcntl lock\n"), xx);
 	    }
 	}
 #endif
@@ -1227,7 +1245,7 @@ static int db3open(rpmdb rpmdb, rpmTag rpmtag, dbiIndex * dbip)
      */
     if ((oflags & DB_CREATE) && (oflags & DB_RDONLY)) {
 	/* dbhome is writable, and DB->open flags may conflict. */
-	const char * dbfn = (dbfile ? dbfile : tagName(dbi->dbi_rpmtag));
+	const char * dbfn = (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag));
 	/*@-mods@*/
 	const char * dbf = rpmGetPath(dbhome, "/", dbfn, NULL);
 	/*@=mods@*/
@@ -1335,8 +1353,8 @@ assert(rpmdb && rpmdb->db_dbenv);
     }
 /*@=branchstate@*/
 
-    rpmMessage(RPMMESS_DEBUG, _("opening  db index       %s/%s %s mode=0x%x\n"),
-		dbhome, (dbfile ? dbfile : tagName(dbi->dbi_rpmtag)),
+    rpmMessage(RPMMESS_DEBUG, D_("opening  db index       %s/%s %s mode=0x%x\n"),
+		dbhome, (dbfile ? dbfile : mapTagName(dbi->dbi_rpmtag)),
 		prDbiOpenFlags(oflags, 0), dbi->dbi_mode);
 
     if (rc == 0) {
@@ -1582,7 +1600,7 @@ assert(rpmdb && rpmdb->db_dbenv);
 				dbhome, (dbfile ? dbfile : ""));
 		    } else if (dbfile) {
 			rpmMessage(RPMMESS_DEBUG,
-				_("locked   db index       %s/%s\n"),
+				D_("locked   db index       %s/%s\n"),
 				dbhome, dbfile);
 		    }
 		}
