@@ -1,13 +1,0 @@
-#!/bin/sh
-
-# These are the build root policies that rpm invokes at the end
-# of the %install scriptlet.
-
-# Compress man pages (usually with gzip)
-@USRLIBRPM@/brp-compress
-
-# Strip ELF binaries (ussually with binutils).
-@USRLIBRPM@/brp-strip
-
-# Strip even more sections (usually with binutils).
-@USRLIBRPM@/brp-strip-comment-note
