@@ -478,12 +478,14 @@ extern const char *__progname;
 #if ENABLE_NLS && !defined(__LCLINT__)
 # include <libintl.h>
 # define _(Text) dgettext (PACKAGE, Text)
+# define D_(Text) Text
 #else
 # undef bindtextdomain
 # define bindtextdomain(Domain, Directory) /* empty */
 # undef textdomain
 # define textdomain(Domain) /* empty */
 # define _(Text) Text
+# define D_(Text) Text
 # undef dgettext
 # define dgettext(DomainName, Text) Text
 #endif
